# jugglingRobot

./: README.md  robotSimulationBringup.launch  stack.xml
adjointMap/: CMakeLists.txt  mainpage.dox  manifest.xml
adjointMap/common/include/adjointMap/: adjointMap.h
adjointMap/common/src/: adjointMap.cpp
graspMatrix/: CMakeLists.txt  mainpage.dox  manifest.xml
graspMatrix/common/include/graspMatrix/: graspMatrix.h
graspMatrix/common/src/: graspMatrix.cpp
handJacobian/: CMakeLists.txt  mainpage.dox  manifest.xml
handJacobian/common/include/handJacobian/: .handJacobian.h.swp  handJacobian.h
handJacobian/common/src/: handJacobian.cpp
report/: algorithm2e.sty  ref.bib  technicalReport.tex
robotDescription/: manifest.xml
robotDescription/urdf/: materials.urdf.xacro  robot.urdf.xacro
robotDescription/urdf/common/: uploadRobotDescription.launch
robotDescription/urdf/lwa/: lwa.urdf.xacro  lwa_common.xacro
robotDescription/urdf/paddle/: paddle.urdf.xacro  paddle_common.urdf.xacro
robotDescription/urdf/torso/: torso.urdf.xacro  torso_common.xacro
robotPaddlingControl/: .CMakeLists.txt.swp  CMakeLists.txt  Doxyfile  mainpage.dox  manifest.xml
robotPaddlingControl/cmake/: FindGUROBI.cmake
robotPaddlingControl/common/include/robotPaddlingControl/: robotPaddlingController.h
robotPaddlingControl/common/include/rostopicCommunication/: rostopicCommunication.h
robotPaddlingControl/common/src/: gurobiOptimizer.cpp  robotPaddlingControlNode.cpp  robotPaddlingController.cpp  rostopicCommunication.cpp
robotPaddlingControl/config/: robotPaddlingController.yaml  rostopicCommunication.yaml
robot_vel_integrater/: CMakeLists.txt  Doxyfile  mainpage.dox  manifest.xml
robot_vel_integrater/common/include/robot_vel_integrater/: robot_vel_integrater.h
robot_vel_integrater/common/src/: robot_vel_integrater.cpp
robot_vel_integrater/config/: robot_vel_integrater.yaml
robot_vel_integrater/launch/: robot_vel_integrater_node.launch
singleArmQuaternionConstraint/: CMakeLists.txt  mainpage.dox  manifest.xml
singleArmQuaternionConstraint/common/include/singleArmQuaternionConstraint/: singleArmQuaternionConstraint.h
singleArmQuaternionConstraint/common/src/: singleArmQuaternionConstraint.cpp
singleArmTranslationConstraint/: CMakeLists.txt  mainpage.dox  manifest.xml
singleArmTranslationConstraint/common/include/singleArmTranslationConstraint/: singleArmTranslationConstraint.h
singleArmTranslationConstraint/common/src/: singleArmTranslationConstraint.cpp
